public interface MaintainsInfrastructure {

    public void performMaintenance();


}
