public interface Payable {

    //Abstract method since it is in interface class method
    public double calculateSalary();

}
